--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- Linear Layout with vertical orientation and other properties -->
 
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -14,33 +14,67 @@
     tools:context=".LoginActivity"
     android:background="#c1e9eb">
 
-    <!-- TextView for heading -->
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Login"
-        android:textSize="40sp"
-        android:fontFamily="@font/font"/>
+    <!--    &lt;!&ndash; TextView for heading &ndash;&gt;-->
+<!--    <TextView-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="Login"-->
+<!--        android:textSize="40sp"-->
+<!--        android:fontFamily="@font/font"/>-->
 
-    <!-- Edit text for email -->
-    <EditText
-        android:id="@+id/email"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Enter your Email" />
+<!--    &lt;!&ndash; Edit text for email &ndash;&gt;-->
+<!--    <EditText-->
+<!--        android:id="@+id/email"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:hint="Enter your Email" />-->
 
-    <!-- Edit text for password -->
-    <EditText
-        android:id="@+id/password"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Enter your Password"
-        android:inputType="textPassword" />
+<!--    &lt;!&ndash; Edit text for password &ndash;&gt;-->
+<!--    <EditText-->
+<!--        android:id="@+id/password"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:hint="Enter your Password"-->
+<!--        android:inputType="textPassword" />-->
 
     <!-- Button for Login with text "Login" -->
-    <Button
+
+    <TextView
+        android:layout_width="396dp"
+        android:layout_height="437dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginTop="81dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginBottom="198dp"
+        android:fontFamily="@font/font"
+        android:text="BioSec"
+        android:textStyle="bold"
+        android:textAlignment="center"
+        android:textSize="106sp"
+        android:typeface="monospace" />
+
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/login"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Login" />
-</LinearLayout>
+        android:layout_width="249dp"
+        android:layout_height="75dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="74dp"
+        android:layout_marginLeft="180dp"
+        android:layout_marginTop="374dp"
+        android:layout_marginEnd="74dp"
+        android:background="@drawable/google_button"
+        android:drawableLeft="@drawable/google"
+        android:drawablePadding="2dp"
+        android:fontFamily="@font/font2"
+        android:paddingLeft="30dp"
+        android:paddingRight="23dp"
+        android:text="Login With Google"
+        android:textAllCaps="false"
+        android:textSize="19dp"
+        android:typeface="sans" />
+
+</RelativeLayout>
