--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,53 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- Relative Layout with vertical orientation and other properties -->
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center_vertical"
+    android:orientation="vertical"
+    android:padding="15dp"
     android:background="#c1e9eb">
 
-    <!-- Heading -->
+    <!-- Header -->
+
     <TextView
-        android:layout_width="384dp"
-        android:layout_height="162dp"
+        android:layout_width="396dp"
+        android:layout_height="437dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="106dp"
-        android:layout_marginEnd="14dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginTop="81dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginBottom="198dp"
+        android:fontFamily="@font/font"
         android:text="BioSec"
+        android:textStyle="bold"
         android:textAlignment="center"
         android:textSize="106sp"
-        android:typeface="monospace"
-        android:fontFamily="@font/font"/>
+        android:typeface="monospace" />
 
-    <!-- Notification Icon -->
-    <ImageView
-        android:id="@+id/notificationIcon"
-        android:layout_width="44dp"
-        android:layout_height="51dp"
+    <!-- Button to sign in using Google -->
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/login"
+        android:layout_width="249dp"
+        android:layout_height="75dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:src="@drawable/bell" />
+        android:layout_marginStart="74dp"
+        android:layout_marginLeft="180dp"
+        android:layout_marginTop="374dp"
+        android:layout_marginEnd="74dp"
+        android:background="@drawable/google_button"
+        android:drawableLeft="@drawable/google"
+        android:drawablePadding="2dp"
+        android:fontFamily="@font/font2"
+        android:paddingLeft="30dp"
+        android:paddingRight="23dp"
+        android:text="Login With Google"
+        android:textAllCaps="false"
+        android:textSize="19dp"
+        android:typeface="sans" />
 
 </RelativeLayout>
 
 
 
-<!--
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>-->
+
+<!--&lt;!&ndash;-->
+<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
+<!--    xmlns:tools="http://schemas.android.com/tools"-->
+<!--    android:layout_width="match_parent"-->
+<!--    android:layout_height="match_parent"-->
+<!--    tools:context=".MainActivity">-->
+
+<!--    <TextView-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="Hello World!"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent" />-->
+
+<!--</androidx.constraintlayout.widget.ConstraintLayout>&ndash;&gt;-->
