--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -29,4 +29,24 @@
         android:layout_marginEnd="16dp"
         android:src="@drawable/bell" />
 
+    <!-- Button to sign in using Google -->
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/logout"
+        android:layout_width="192dp"
+        android:layout_height="80dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="107dp"
+        android:layout_marginLeft="180dp"
+        android:layout_marginTop="423dp"
+        android:layout_marginEnd="112dp"
+        android:background="@drawable/google_button"
+        android:paddingLeft="30dp"
+        android:paddingRight="23dp"
+        android:text="Logout"
+        android:textAllCaps="false"
+        android:textSize="19dp"
+        android:typeface="sans" />
+
 </RelativeLayout>
