--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -29,7 +29,26 @@
         android:layout_marginEnd="16dp"
         android:src="@drawable/bell" />
 
-    <!-- Button to sign in using Google -->
+    <!-- Button to sign out -->
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/biometric"
+        android:layout_width="wrap_content"
+        android:layout_height="64dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="70dp"
+        android:layout_marginLeft="180dp"
+        android:layout_marginTop="299dp"
+        android:layout_marginEnd="76dp"
+        android:background="@drawable/google_button"
+        android:paddingLeft="30dp"
+        android:paddingRight="23dp"
+        android:text="Click Here for Biometric Prompt"
+        android:textAllCaps="false"
+        android:textSize="19dp"
+        android:typeface="sans" />
+
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/logout"
         android:layout_width="192dp"
