--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -1,71 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#c1e9eb">
 
-    <!-- Heading -->
-    <TextView
-        android:layout_width="384dp"
-        android:layout_height="162dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="106dp"
-        android:layout_marginEnd="14dp"
-        android:text="BioSec"
-        android:textAlignment="center"
-        android:textSize="106sp"
-        android:typeface="monospace"
-        android:fontFamily="@font/font"/>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <!-- Notification Icon -->
-    <ImageView
-        android:id="@+id/notificationIcon"
-        android:layout_width="44dp"
-        android:layout_height="51dp"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:src="@drawable/bell" />
+        <TextView
+            android:layout_width="384dp"
+            android:layout_height="162dp"
+            android:layout_marginTop="106dp"
+            android:layout_marginEnd="14dp"
+            android:fontFamily="@font/font"
+            android:text="BioSec"
+            android:textAlignment="center"
+            android:textSize="106sp"
+            android:typeface="monospace" />
 
-    <!-- Button to sign out -->
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/biometric"
-        android:layout_width="wrap_content"
-        android:layout_height="64dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="70dp"
-        android:layout_marginLeft="180dp"
-        android:layout_marginTop="299dp"
-        android:layout_marginEnd="76dp"
-        android:background="@drawable/google_button"
-        android:paddingLeft="30dp"
-        android:paddingRight="23dp"
-        android:text="Click Here for Biometric Prompt"
-        android:textAllCaps="false"
-        android:textSize="19dp"
-        android:typeface="sans" />
+        <ImageView
+            android:id="@+id/notificationIcon"
+            android:layout_width="44dp"
+            android:layout_height="51dp"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:src="@drawable/bell" />
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/logout"
-        android:layout_width="192dp"
-        android:layout_height="80dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="107dp"
-        android:layout_marginLeft="180dp"
-        android:layout_marginTop="423dp"
-        android:layout_marginEnd="112dp"
-        android:background="@drawable/google_button"
-        android:paddingLeft="30dp"
-        android:paddingRight="23dp"
-        android:text="Logout"
-        android:textAllCaps="false"
-        android:textSize="19dp"
-        android:typeface="sans" />
+<!--        <androidx.appcompat.widget.AppCompatButton-->
+<!--            android:id="@+id/biometric"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="64dp"-->
+<!--            android:layout_alignParentStart="true"-->
+<!--            android:layout_alignParentTop="true"-->
+<!--            android:layout_alignParentEnd="true"-->
+<!--            android:layout_marginStart="70dp"-->
+<!--            android:layout_marginLeft="180dp"-->
+<!--            android:layout_marginTop="299dp"-->
+<!--            android:layout_marginEnd="76dp"-->
+<!--            android:background="@drawable/google_button"-->
+<!--            android:paddingLeft="30dp"-->
+<!--            android:paddingRight="23dp"-->
+<!--            android:text="Click Here for Biometric Prompt"-->
+<!--            android:textAllCaps="false"-->
+<!--            android:textSize="19dp"-->
+<!--            android:typeface="sans" />-->
 
-</RelativeLayout>
+<!--        <androidx.appcompat.widget.AppCompatButton-->
+<!--            android:id="@+id/logout"-->
+<!--            android:layout_width="192dp"-->
+<!--            android:layout_height="80dp"-->
+<!--            android:layout_alignParentStart="true"-->
+<!--            android:layout_alignParentTop="true"-->
+<!--            android:layout_alignParentEnd="true"-->
+<!--            android:layout_marginStart="107dp"-->
+<!--            android:layout_marginLeft="160dp"-->
+<!--            android:layout_marginTop="423dp"-->
+<!--            android:layout_marginEnd="112dp"-->
+<!--            android:background="@drawable/google_button"-->
+<!--            android:paddingLeft="20dp"-->
+<!--            android:paddingRight="20dp"-->
+<!--            android:text="Logout"-->
+<!--            android:textAllCaps="false"-->
+<!--            android:textSize="19dp"-->
+<!--            android:typeface="sans" />-->
+
+    </RelativeLayout>
+
+    <androidx.drawerlayout.widget.DrawerLayout
+        android:id="@+id/drawer_layout"
+        android:layout_width="263dp"
+        android:layout_height="match_parent">
+
+        <com.google.android.material.navigation.NavigationView
+            android:id="@+id/nav_view"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            app:headerLayout="@layout/header"
+            app:menu="@menu/main_menu" />
+
+    </androidx.drawerlayout.widget.DrawerLayout>
+
+</FrameLayout>
