--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -31,6 +31,27 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:src="@drawable/bell" />
+
+        <!-- Button to initiate QR code scanner to register device -->
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/scanner"
+            android:layout_width="249dp"
+            android:layout_height="75dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="74dp"
+            android:layout_marginLeft="180dp"
+            android:layout_marginTop="374dp"
+            android:layout_marginEnd="74dp"
+            android:background="@drawable/google_button"
+            android:fontFamily="@font/font2"
+            android:paddingLeft="25dp"
+            android:paddingRight="23dp"
+            android:text="Scan Device with QR Code"
+            android:textAllCaps="false"
+            android:textSize="19dp"
+            android:typeface="sans" />
     </RelativeLayout>
 
     <!--Navigation Drawer Layout-->
