--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -1,16 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--Frame Layout to integrate both Relative Layout and Drawer Layout simultaneously-->
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<!-- FrameLayout to integrate both Relative Layout and Drawer Layout simultaneously -->
+<androidx.drawerlayout.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#c1e9eb">
 
+    <!-- RelativeLayout for the home page content -->
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <!--Header-->
+        <!-- Header -->
         <TextView
             android:layout_width="384dp"
             android:layout_height="162dp"
@@ -22,7 +25,7 @@
             android:textSize="106sp"
             android:typeface="monospace" />
 
-        <!--Notification Icon-->
+        <!-- Notification Icon -->
         <ImageView
             android:id="@+id/notificationIcon"
             android:layout_width="44dp"
@@ -54,19 +57,13 @@
             android:typeface="sans" />
     </RelativeLayout>
 
-    <!--Navigation Drawer Layout-->
-    <androidx.drawerlayout.widget.DrawerLayout
-        android:id="@+id/drawer_layout"
+    <!-- NavigationView for the navigation drawer -->
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/nav_view"
         android:layout_width="260dp"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        app:headerLayout="@layout/header"
+        app:menu="@menu/main_menu" />
 
-        <com.google.android.material.navigation.NavigationView
-            android:id="@+id/nav_view"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="start"
-            app:headerLayout="@layout/header"
-            app:menu="@menu/main_menu" />
-    </androidx.drawerlayout.widget.DrawerLayout>
-
-</FrameLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
